examples/test/testpolicy3887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3887
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key13: value35
      key47: value42
      key43: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value48
      podSelector:
        matchLabels:
          key28: value16
